--- a/Frontend/BapMomokApp/package.json
+++ b/Frontend/BapMomokApp/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-kakao/core": "^2.4.0",
+    "@react-native-kakao/map": "^2.2.7",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
+    "@react-spring/native": "^10.0.1",
     "@react-spring/web": "^10.0.1",
     "expo": "~53.0.20",
     "expo-linear-gradient": "~14.1.5",
