--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^10.0.1",
+    "firebase": "^12.0.0",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
