--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-spring/web": "^10.0.1",
     "firebase": "^12.0.0",
+    "framer-motion": "^12.23.6",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
