--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.23.6",
     "next": "15.4.2",
     "react": "19.1.0",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "19.1.0",
     "react-tinder-card": "^1.6.4"
   },
